# local-ai-orchestrator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NEXT_STEPS.md  README.md  SECURITY.md  docker-compose.yml  nginx.conf  pyproject.toml  test_api.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
frontend/: app.js  index.html  styles.css
orchestrator_client/: __init__.py  cli.py  client.py  models.py
src/orchestrator/: __init__.py  config.py  main.py  resilience.py  security.py
src/orchestrator/adapters/: __init__.py  base.py  huggingface.py  lmsys.py  ollama.py  openrouter.py
src/orchestrator/analytics/: __init__.py  aggregator.py  budget.py  collector.py  storage.py
src/orchestrator/api/: __init__.py  app.py  model_service.py  routes.py  streaming_routes.py
src/orchestrator/cache/: __init__.py  base.py  factory.py  memory.py  redis.py
src/orchestrator/db/: __init__.py  base.py  manager.py  models.py
src/orchestrator/http/: __init__.py  client.py
src/orchestrator/quota/: __init__.py  limiter.py  manager.py
tests/: __init__.py  conftest.py  test_api.py  test_budget.py  test_cache.py  test_canary.py  test_db_manager.py  test_db_models.py  test_huggingface_adapter.py  test_integration.py  test_lmsys_adapter.py  test_ollama_adapter.py  test_openrouter_adapter.py  test_performance.py  test_quota.py  test_resilience.py  test_resolution.py  test_routing.py  test_security.py  test_streaming.py
(+17 files in other folders)
